plg_system_mcm config language

--- a/plugins/plg_system_mcm/plugins/language/en-GB/en-GB.plg_system_mcm.ini
+++ b/plugins/plg_system_mcm/plugins/language/en-GB/en-GB.plg_system_mcm.ini
@@ -1,2 +1,12 @@
 PLG_SYSTEM_MCM="Custom Media Manager"
 PLG_SYSTEM_MCM_XML_DESCRIPTION="Plugin for extending com_media for customization"
+
+; Fields in basic fieldset
+PLG_SYSTEM_MCM_FIELD_IMGMINWIDTH_LABEL="Image Min. Width"
+PLG_SYSTEM_MCM_FIELD_IMGMINWIDTH_DESCRIPTION="The minimum allowed image width in pixels"
+PLG_SYSTEM_MCM_FIELD_IMGMINHEIGHT_LABEL="Image Min. Height"
+PLG_SYSTEM_MCM_FIELD_IMGMINHEIGHT_DESCRIPTION="The minimum allowed image height in pixels"
+PLG_SYSTEM_MCM_FIELD_IMGMAXWIDTH_LABEL="Image Max. Width"
+PLG_SYSTEM_MCM_FIELD_IMGMAXWIDTH_DESCRIPTION="The maximum allowed image width in pixels"
+PLG_SYSTEM_MCM_FIELD_IMGMAXHEIGHT_LABEL="Image Max. Height"
+PLG_SYSTEM_MCM_FIELD_IMGMAXHEIGHT_DESCRIPTION="The maximum allowed image height in pixels"
