apply button label

--- a/plugins/plg_system_mcm/plugins/language/en-GB/en-GB.plg_system_mcm.ini
+++ b/plugins/plg_system_mcm/plugins/language/en-GB/en-GB.plg_system_mcm.ini
@@ -1,6 +1,8 @@
 PLG_SYSTEM_MCM="Custom Media Manager"
 PLG_SYSTEM_MCM_XML_DESCRIPTION="Plugin for extending com_media for customization"
 
+PLG_SYSTEM_MCM_APPLY="Apply"
+
 ; Fields in basic fieldset
 PLG_SYSTEM_MCM_FIELD_IMGMINWIDTH_LABEL="Image Min. Width"
 PLG_SYSTEM_MCM_FIELD_IMGMINWIDTH_DESCRIPTION="The minimum allowed image width in pixels"
