apply intro image

--- a/components/com_media_mcm/language/en-GB/en-GB.com_media_mcm.ini
+++ b/components/com_media_mcm/language/en-GB/en-GB.com_media_mcm.ini
@@ -7,3 +7,6 @@ COM_MEDIA_MCM_ERROR_WARNUPLOADTOOLARGE="Total size of upload exceeds the limit."
 COM_MEDIA_MCM_ERROR_UNABLE_TO_UPLOAD_FILE="Unable to upload file."
 COM_MEDIA_MCM_INVALID_REQUEST="Invalid Request"
 COM_MEDIA_MCM_UPLOAD_COMPLETE="Upload Complete: %s"
+
+; article images modal
+COM_MEDIA_MCM_ARTICLE_SAVEREQ="Save required. If the article is not saved the pending changes will be lost."
