mv lang file setting for save req

--- a/plugins/plg_system_mcm/plugins/language/en-GB/en-GB.plg_system_mcm.ini
+++ b/plugins/plg_system_mcm/plugins/language/en-GB/en-GB.plg_system_mcm.ini
@@ -1,8 +1,6 @@
 PLG_SYSTEM_MCM="Custom Media Manager"
 PLG_SYSTEM_MCM_XML_DESCRIPTION="Plugin for extending com_media for customization"
 
-PLG_SYSTEM_MCM_APPLY="Apply"
-
 ; Fields in basic fieldset
 PLG_SYSTEM_MCM_FIELD_IMGMINWIDTH_LABEL="Image Min. Width"
 PLG_SYSTEM_MCM_FIELD_IMGMINWIDTH_DESCRIPTION="The minimum allowed image width in pixels"
@@ -12,3 +10,7 @@ PLG_SYSTEM_MCM_FIELD_IMGMAXWIDTH_LABEL="Image Max. Width"
 PLG_SYSTEM_MCM_FIELD_IMGMAXWIDTH_DESCRIPTION="The maximum allowed image width in pixels"
 PLG_SYSTEM_MCM_FIELD_IMGMAXHEIGHT_LABEL="Image Max. Height"
 PLG_SYSTEM_MCM_FIELD_IMGMAXHEIGHT_DESCRIPTION="The maximum allowed image height in pixels"
+
+; article images modal
+PLG_SYSTEM_MCM_APPLY="Apply"
+PLG_SYSTEM_MCM_ARTICLE_SAVEREQ="Save required. If the article is not saved the pending changes will be lost."
